--- a/app/src/main/res/values/sql_insert.xml
+++ b/app/src/main/res/values/sql_insert.xml
@@ -2,11 +2,11 @@
 <resources>
     <string name="sql_insert_transaction" translatable="false">
         INSERT INTO [transaction] ([category_id], [account_id], [sum10000], [product], [created_at_utc], [is_committed])
-        VALUES (?1, ?2, ?3, ?4, ?5, 0);
+        VALUES (?1, ?2, ?3, ?4, ?5, ?6);
     </string>
     <string name="sql_insert_transfer" translatable="false">
         INSERT INTO [transfer] ([account_id_from], [account_id_to], [sum10000_from], [sum10000_to], [created_at_utc], [is_committed])
-        VALUES (?1, ?2, ?3, ?4, ?5, 0);
+        VALUES (?1, ?2, ?3, ?4, ?5, ?6);
     </string>
     <string name="sql_insert_currency" translatable="false">
         INSERT INTO [currency] ([name], [symbol], [is_visible], [comment])
